feat: add visual semantic model editor
